--- a/index.ipynb
+++ b/index.ipynb
@@ -343,31 +343,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('Snoopy', 'beagle', 3),\n",
-       " ('McGruff', 'bloodhound', 10),\n",
-       " ('Scooby', 'great dane', 6),\n",
-       " ('Little Ann', 'coonhound', 5),\n",
-       " ('Pickles', 'black lab', 13),\n",
-       " ('Clifford', 'big red', 4),\n",
-       " ('Lassie', 'collie', 7),\n",
-       " ('Snowy', 'fox terrier', 8),\n",
-       " (None, 'golden retriever', 4)]"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "OperationalError",
+     "evalue": "near \",\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-73-dae8db64859d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT name,breed,age FROM dogs WHERE 5<age, age <10;'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: near \",\": syntax error"
+     ]
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,breed,age FROM dogs WHERE 5<age<10;''').fetchall()"
+    "cur.execute('''SELECT name,breed,age FROM dogs WHERE 5<age, age <10;''').fetchall()"
    ]
   },
   {
