--- a/index.ipynb
+++ b/index.ipynb
@@ -375,27 +375,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('Snoopy', 3, 1),\n",
-       " ('Scooby', 6, 1),\n",
        " ('Clifford', 4, 1),\n",
-       " ('Lassie', 7, 1),\n",
-       " (None, 4, 1)]"
+       " (None, 4, 1),\n",
+       " ('Scooby', 6, 1),\n",
+       " ('Lassie', 7, 1)]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,age, hungry FROM dogs WHERE hungry IS True AND age>=2 AND age<=7 ORDER ;''').fetchall()"
+    "cur.execute('''SELECT name,age, hungry FROM dogs WHERE hungry IS True AND age>=2 AND age<=7 ORDER BY age DESC;''').fetchall()"
    ]
   },
   {
